--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<h1> hellow how you are dude!</h1>
+	<p>So im really trying so hard to get this terminal thig going !!</p>
 </body>
 </html>
